automatons/c_minus_project/c_minus_semantic/CMinus.java
/* CMinus.java */
/* Generated By:JavaCC: Do not edit this line. CMinus.java */
import java.util.Hashtable;
import java.util.Enumeration;

public class CMinus implements CMinusConstants {

    static Hashtable <String, Id>symbols_table = new Hashtable();

    public static void main(String args[]) throws ParseException{
        CMinus parser = new CMinus(System.in);
        parser.Start();
    }

  static final public void Start() throws ParseException {
    label_1:
    while (true) {
      program();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Int:
      case Void:
      case Real:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
    }
    jj_consume_token(0);
System.out.println("\u005cn####Finished####\u005cn");

        System.out.println("Symbols table:\u005cn");

        Enumeration symbols_table_keys = symbols_table.keys();

        System.out.format("%20s%20s%20s%20s\u005cn\u005cn", "Name", "Type", "Category", "Size");

        while(symbols_table_keys.hasMoreElements()) {
            String key = (String) symbols_table_keys.nextElement();
            System.out.println(symbols_table.get(key));
        }
  }

// Emulates epsilon
  static final public void empty() throws ParseException {
{if ("" != null) return;}
  }

  static final public void program() throws ParseException {
    declaration_list();
  }

  static final public void declaration_list() throws ParseException {
    declaration();
    declaration_list_prime();
  }

  static final public void declaration_list_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Int:
    case Void:
    case Real:{
      declaration();
      declaration_list_prime();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      empty();
    }
  }

  static final public void declaration() throws ParseException {
    if (jj_2_1(3)) {
      var_declaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Int:
      case Void:
      case Real:{
        func_declaration();
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public String type_specifier() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Int:{
      jj_consume_token(Int);
{if ("" != null) return "int";}
      break;
      }
    case Void:{
      jj_consume_token(Void);
{if ("" != null) return "void";}
      break;
      }
    case Real:{
      jj_consume_token(Real);
{if ("" != null) return "real";}
      break;
      }
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void var_declaration() throws ParseException {String lexem, type; String[] category_and_size=new String[2];
    type = type_specifier();
    jj_consume_token(Id);
lexem = token.image.toString();
        if(symbols_table.containsKey(lexem)) System.out.println(getToken(0).beginLine +
        "," + getToken(0).beginColumn + ": ERROR. \u005c"" + lexem +
        "\u005c" ya se encuentra en la tabla de s\u00edmbolos");
        else symbols_table.put(lexem, new Id(lexem, type, "", 0));
    category_and_size = var_declaration_prime();
symbols_table.get(lexem).category=category_and_size[0];
        symbols_table.get(lexem).size=Integer.parseInt(category_and_size[1]);
  }

  static final public String[] var_declaration_prime() throws ParseException {String category_and_size[]=new String[2];
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftSquareBracket:{
      jj_consume_token(LeftSquareBracket);
      jj_consume_token(Number);
category_and_size[1] = token.image.toString();
      jj_consume_token(RightSquareBracket);
      jj_consume_token(Semicolon);
category_and_size[0]= "array";
        {if ("" != null) return category_and_size;}
      break;
      }
    case Semicolon:{
      empty();
      jj_consume_token(Semicolon);
category_and_size[0]="variable";
        category_and_size[1]="0";
        {if ("" != null) return category_and_size;}
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void func_declaration() throws ParseException {String lexem, type, category; int size;
    type = type_specifier();
    jj_consume_token(Id);
lexem = token.image.toString();
        if(symbols_table.containsKey(lexem)) System.out.println(getToken(0).beginLine +
        "," + getToken(0).beginColumn + ": ERROR. \u005c"" + lexem +
        "\u005c" ya se encuentra en la tabla de s\u00edmbolos");
        else symbols_table.put(lexem, new Id(lexem, type, "", 0));
    jj_consume_token(LeftParen);
    size = params();
symbols_table.get(lexem).size=size;
    jj_consume_token(RightParen);
    compound_stmt();
symbols_table.get(lexem).category="function";
  }

  static final public int params() throws ParseException {int counter;
    if (jj_2_2(2)) {
      counter = param_list();
{if ("" != null) return counter;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Void:{
        jj_consume_token(Void);
{if ("" != null) return 0;}
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public int param_list() throws ParseException {int counter;
    param();
    counter = param_list_prime();
{if ("" != null) return counter+1;}
    throw new Error("Missing return statement in function");
  }

  static final public int param_list_prime() throws ParseException {int counter;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Comma:{
      jj_consume_token(Comma);
      param();
      counter = param_list_prime();
{if ("" != null) return counter+1;}
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      empty();
{if ("" != null) return 0;}
    }
    throw new Error("Missing return statement in function");
  }

  static final public void param() throws ParseException {String lexem, type, category;
    type = type_specifier();
    jj_consume_token(Id);
lexem = token.image.toString();
        if(symbols_table.containsKey(lexem)) System.out.println(getToken(0).beginLine +
        "," + getToken(0).beginColumn + ": ERROR. \u005c"" + lexem +
        "\u005c" ya se encuentra en la tabla de s\u00edmbolos");
        else symbols_table.put(lexem, new Id(lexem, type, "", 0));
    category = param_prime();
symbols_table.get(lexem).category=category;
  }

  static final public String param_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftSquareBracket:{
      jj_consume_token(LeftSquareBracket);
      jj_consume_token(RightSquareBracket);
{if ("" != null) return "array";}
      break;
      }
    default:
      jj_la1[7] = jj_gen;
      empty();
{if ("" != null) return "variable";}
    }
    throw new Error("Missing return statement in function");
  }

  static final public void compound_stmt() throws ParseException {
    jj_consume_token(LeftBrace);
    local_declarations();
    statement_list();
    jj_consume_token(RightBrace);
  }

  static final public void local_declarations() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Int:
    case Void:
    case Real:{
      var_declaration();
      local_declarations();
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      empty();
    }
  }

  static final public void statement_list() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case If:
    case Return:
    case While:
    case Semicolon:
    case LeftParen:
    case LeftBrace:
    case Id:
    case Number:
    case Decimal:{
      statement();
      statement_list();
      break;
      }
    default:
      jj_la1[9] = jj_gen;
      empty();
    }
  }

  static final public void statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Semicolon:
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      expression_stmt();
      break;
      }
    case LeftBrace:{
      compound_stmt();
      break;
      }
    case If:{
      selection_stmt();
      break;
      }
    case While:{
      iteration_stmt();
      break;
      }
    case Return:{
      return_stmt();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expression_stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      expression();
      jj_consume_token(Semicolon);
      break;
      }
    case Semicolon:{
      jj_consume_token(Semicolon);
      break;
      }
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void selection_stmt() throws ParseException {
    jj_consume_token(If);
    jj_consume_token(LeftParen);
    expression();
    jj_consume_token(RightParen);
    statement();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Else:{
      jj_consume_token(Else);
      statement();
      break;
      }
    default:
      jj_la1[12] = jj_gen;
      empty();
    }
  }

  static final public void iteration_stmt() throws ParseException {
    jj_consume_token(While);
    jj_consume_token(LeftParen);
    expression();
    jj_consume_token(RightParen);
    statement();
  }

  static final public void return_stmt() throws ParseException {
    jj_consume_token(Return);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Semicolon:{
      jj_consume_token(Semicolon);
      break;
      }
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      expression();
      jj_consume_token(Semicolon);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expression() throws ParseException {
    if (jj_2_3(5)) {
      var();
      jj_consume_token(Equal);
      expression();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LeftParen:
      case Id:
      case Number:
      case Decimal:{
        simple_expression();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void var() throws ParseException {
    jj_consume_token(Id);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftSquareBracket:{
      jj_consume_token(LeftSquareBracket);
      expression();
      jj_consume_token(RightSquareBracket);
      break;
      }
    default:
      jj_la1[15] = jj_gen;
      empty();
    }
  }

  static final public void simple_expression() throws ParseException {
    additive_expression();
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftAngularBracket:
    case RightAngularBracket:
    case LeftAngularEqual:
    case RightAngularEqual:
    case EqualEqual:
    case BangEqual:{
      relation_operator();
      additive_expression();
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      empty();
    }
  }

  static final public void relation_operator() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftAngularEqual:{
      jj_consume_token(LeftAngularEqual);
      break;
      }
    case RightAngularEqual:{
      jj_consume_token(RightAngularEqual);
      break;
      }
    case LeftAngularBracket:{
      jj_consume_token(LeftAngularBracket);
      break;
      }
    case RightAngularBracket:{
      jj_consume_token(RightAngularBracket);
      break;
      }
    case EqualEqual:{
      jj_consume_token(EqualEqual);
      break;
      }
    case BangEqual:{
      jj_consume_token(BangEqual);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void additive_expression() throws ParseException {
    term();
    additive_expression_prime();
  }

  static final public void additive_expression_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Plus:
    case Minus:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Plus:{
        jj_consume_token(Plus);
        break;
        }
      case Minus:{
        jj_consume_token(Minus);
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      term();
      additive_expression_prime();
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      empty();
    }
  }

  static final public void term() throws ParseException {
    factor();
    term_prime();
  }

  static final public void term_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Multiplier:
    case Slash:{
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case Multiplier:{
        jj_consume_token(Multiplier);
        break;
        }
      case Slash:{
        jj_consume_token(Slash);
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      factor();
      term_prime();
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      empty();
    }
  }

  static final public void factor() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftParen:{
      jj_consume_token(LeftParen);
      expression();
      jj_consume_token(RightParen);
      break;
      }
    default:
      jj_la1[22] = jj_gen;
      if (jj_2_4(2)) {
        call();
      } else if (jj_2_5(2)) {
        var();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case Number:{
          jj_consume_token(Number);
          break;
          }
        case Decimal:{
          jj_consume_token(Decimal);
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
  }

  static final public void call() throws ParseException {
    jj_consume_token(Id);
    jj_consume_token(LeftParen);
    args();
    jj_consume_token(RightParen);
  }

  static final public void args() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LeftParen:
    case Id:
    case Number:
    case Decimal:{
      arg_list();
      break;
      }
    default:
      jj_la1[24] = jj_gen;
      empty();
    }
  }

  static final public void arg_list() throws ParseException {
    expression();
    arg_list_prime();
  }

  static final public void arg_list_prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case Comma:{
      jj_consume_token(Comma);
      expression();
      arg_list_prime();
      break;
      }
    default:
      jj_la1[25] = jj_gen;
      empty();
    }
  }

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_3R_27()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_31()) {
    jj_scanpos = xsp;
    if (jj_3R_32()) return true;
    }
    return false;
  }

  static private boolean jj_3R_31()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(16)) {
    jj_scanpos = xsp;
    if (jj_scan_token(17)) return true;
    }
    if (jj_3R_26()) return true;
    return false;
  }

  static private boolean jj_3R_9()
 {
    if (jj_3R_7()) return true;
    if (jj_scan_token(Id)) return true;
    return false;
  }

  static private boolean jj_3R_23()
 {
    if (jj_3R_26()) return true;
    if (jj_3R_27()) return true;
    return false;
  }

  static private boolean jj_3R_21()
 {
    if (jj_3R_25()) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  static private boolean jj_3R_24()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) return true;
    }
    return false;
  }

  static private boolean jj_3R_28()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(14)) {
    jj_scanpos = xsp;
    if (jj_scan_token(15)) return true;
    }
    if (jj_3R_23()) return true;
    return false;
  }

  static private boolean jj_3R_12()
 {
    if (jj_3R_19()) return true;
    return false;
  }

  static private boolean jj_3R_18()
 {
    return false;
  }

  static private boolean jj_3R_3()
 {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_20()
 {
    if (jj_3R_23()) return true;
    if (jj_3R_24()) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_3()) return true;
    return false;
  }

  static private boolean jj_3R_25()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_scan_token(21)) {
    jj_scanpos = xsp;
    if (jj_scan_token(22)) {
    jj_scanpos = xsp;
    if (jj_scan_token(18)) {
    jj_scanpos = xsp;
    if (jj_scan_token(19)) {
    jj_scanpos = xsp;
    if (jj_scan_token(23)) {
    jj_scanpos = xsp;
    if (jj_scan_token(24)) return true;
    }
    }
    }
    }
    }
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_3R_4()) return true;
    return false;
  }

  static private boolean jj_3R_10()
 {
    if (jj_scan_token(LeftSquareBracket)) return true;
    if (jj_3R_5()) return true;
    if (jj_scan_token(RightSquareBracket)) return true;
    return false;
  }

  static private boolean jj_3R_19()
 {
    if (jj_3R_20()) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_21()) {
    jj_scanpos = xsp;
    if (jj_3R_22()) return true;
    }
    return false;
  }

  static private boolean jj_3R_15()
 {
    if (jj_scan_token(Real)) return true;
    return false;
  }

  static private boolean jj_3R_4()
 {
    if (jj_scan_token(Id)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_10()) {
    jj_scanpos = xsp;
    if (jj_3R_11()) return true;
    }
    return false;
  }

  static private boolean jj_3R_5()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_3()) {
    jj_scanpos = xsp;
    if (jj_3R_12()) return true;
    }
    return false;
  }

  static private boolean jj_3_3()
 {
    if (jj_3R_4()) return true;
    if (jj_scan_token(Equal)) return true;
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_32()
 {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_17()
 {
    if (jj_3R_18()) return true;
    if (jj_scan_token(Semicolon)) return true;
    return false;
  }

  static private boolean jj_3R_29()
 {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_3R_6()) return true;
    return false;
  }

  static private boolean jj_3R_14()
 {
    if (jj_scan_token(Void)) return true;
    return false;
  }

  static private boolean jj_3R_22()
 {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_8()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_16()) {
    jj_scanpos = xsp;
    if (jj_3R_17()) return true;
    }
    return false;
  }

  static private boolean jj_3R_16()
 {
    if (jj_scan_token(LeftSquareBracket)) return true;
    return false;
  }

  static private boolean jj_3R_35()
 {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_11()
 {
    if (jj_3R_18()) return true;
    return false;
  }

  static private boolean jj_3R_36()
 {
    if (jj_3R_5()) return true;
    return false;
  }

  static private boolean jj_3R_2()
 {
    if (jj_3R_7()) return true;
    if (jj_scan_token(Id)) return true;
    if (jj_3R_8()) return true;
    return false;
  }

  static private boolean jj_3R_34()
 {
    if (jj_3R_36()) return true;
    return false;
  }
